# sigillium_personal_signer_verifier

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  build.rs  get_key.py  license
.github/workflows/: ci.yml  release.yml
docs/: document_wizard_template_spec.md  template_sample_comprehensive.json5  template_sample_large.json5  template_sample_toy.json5
src/: command_state.rs  context.rs  crypto.rs  error.rs  fs_hardening.rs  json_canon.rs  keyfile_store.rs  lib.rs  main.rs  notices.rs  types.rs
src/command/: json_ops.rs  keyfile_inspect.rs  keyfile_lifecycle.rs  keyfile_mutation.rs  mod.rs  session.rs  sign_verify.rs
src/command/document_wizard/: flow.rs  mod.rs  nav.rs  ops.rs  types.rs  validate.rs
src/keyfile/: crypto.rs  mod.rs  types.rs  validate.rs
src/keyfile/fs/: io.rs  lock.rs  mod.rs
src/keyfile/ops/: inspect.rs  lifecycle.rs  mod.rs  mutation.rs  passphrase.rs  session.rs  test_support.rs
src/platform/: debug_faults.rs  linux.rs  macos.rs  mod.rs  noop.rs  windows.rs
src/security_log/: api.rs  mod.rs  model.rs  store.rs
src/template/: doc_wizard.rs  doc_wizard_verify.rs  mod.rs
src/ui/: message.rs  mod.rs  nav.rs  panel_about.rs  panel_create_keyfile.rs  panel_document_wizard.rs  panel_key_registry.rs  panel_keyfile_create.rs  panel_keyfile_select.rs  panel_lock.rs  panel_security.rs  panel_sign.rs  panel_verify.rs  route_policy.rs  widgets.rs
tests/: document_wizard_basic.rs  golden_path_json.rs  golden_path_string.rs  lifecycle.rs  lock_gating.rs  mode_parity.rs  passphrase_rotation.rs  quarantine_on_unlock.rs  restart_persistence.rs
tests/common/: mod.rs
