# cargo.toml

[package]
name = "sigillium_personal_signer_verifier"
version = "0.7.1"
description = "An app to store multiple ed25519 keys and sign with them and to verify signitures."
authors = ["paul carlona"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sigillium_personal_signer_verifier_lib"
crate-type = ["rlib"]

[dependencies]
thiserror = "1.0"
subtle = "2"
bip39 = "1.1"
hmac = "0.12"
sha2 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = { version = "0.17", default-features = false, features = [
    "draft202012",
] }
base64 = "0.22"
rand_core = "0.9.3"
hex = "0.4.3"
regex = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
libc = "0.2.178"
getrandom = "0.3.4"
windows-sys = { version = "0.52", features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_Authorization",
] }
eframe = "0.33.3"
rfd = "0.16.0"
arboard = "3.6.1"
directories = "6.0.0"
chrono = "0.4.42"
json5 = "1.3.0"
pulldown-cmark = "0.12"
webbrowser = "1.0.5"
[dev-dependencies]
tempfile = "3"

[[bin]]
name = "sigillium-psv"
path = "src/main.rs"

[build-dependencies]
winres = "0.1.12"
